# Responder

./: CI-setup.sh  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.Dockerfile  rustfmt.toml
.github/workflows/: rust.yml
examples/: Readme.md  origin_control.rs  post_request.rs  random_numbers.rs  serve_html.rs  url_params.rs
examples/static/: index.html  manual.html  manual_serve_file.html
src/: errors.rs  lib.rs  prelude.rs  request.rs  request_info.rs  respond.rs  response.rs  stream.rs  thread_handler.rs  utils.rs
static/: 404.html  test.html
test-server/: Cargo.toml
test-server/src/: main.rs
