[package]
name = "responder"
version = "0.1.75"
edition = "2021"
description = "Quickly create API:s using this simple and lightweight framework."

license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Arturr-H/Responder"
keywords = ["web", "framework"]
categories = ["web-programming"]

[dependencies]
terminal-link = "0.1.0"
ansi_term = "0.12.1"

[dev-dependencies]
rand = "0.8.5"
