[package]
name = "responder"
version = "0.1.989"
edition = "2021"
description = "Quickly create API:s using this simple and lightweight framework."

license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Arturr-H/Responder"
keywords = ["web", "framework"]
categories = ["web-programming"]

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.8.5"
